--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root {
+    width: 100%;
+    height: 100%;
+}
+#root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+main {
+    height: 100%;
+}
+
 @layer base {
     :root {
         --background: 180 13% 94%;
@@ -23,7 +38,7 @@
         --muted-foreground: 215.4 16.3% 46.9%;
 
         --accent: 210 40% 96.1%;
-        --accent-foreground: 222.2 47.4% 11.2%;
+        --accent-foreground: 0 0% 56%;
 
         --destructive: 0 84.2% 60.2%;
         --destructive-foreground: 210 40% 98%;
@@ -36,8 +51,8 @@
     }
 
     .dark {
-        --background: 222.2 84% 4.9%;
-        --foreground: 210 40% 98%;
+        --background: 216 28% 7%;
+        --foreground: 212 8% 55%;
 
         --card: 222.2 84% 4.9%;
         --card-foreground: 210 40% 98%;
@@ -45,8 +60,8 @@
         --popover: 222.2 84% 4.9%;
         --popover-foreground: 210 40% 98%;
 
-        --primary: 210 40% 98%;
-        --primary-foreground: 222.2 47.4% 11.2%;
+        --primary: 186 33% 44%;
+        --primary-foreground: 208 35% 93%;
 
         --secondary: 217.2 32.6% 17.5%;
         --secondary-foreground: 210 40% 98%;
@@ -55,7 +70,7 @@
         --muted-foreground: 215 20.2% 65.1%;
 
         --accent: 217.2 32.6% 17.5%;
-        --accent-foreground: 210 40% 98%;
+        --accent-foreground: 210 17% 82%;
 
         --destructive: 0 62.8% 30.6%;
         --destructive-foreground: 210 40% 98%;
